Modification de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, enim?
       </p>
+
+      <a href="">Voir la suite</a>
     </div>
   </body>
 </html>
